fix sticky footer bug on safari

--- a/source/css/base/_global.scss
+++ b/source/css/base/_global.scss
@@ -5,7 +5,7 @@ html {
 
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: white;
   background: repeating-linear-gradient(-45deg, rgba(255,255,255,0.13),
   rgba(255,255,255,0.14) 15px);
